test/files/neg/t414.check
t414.scala:5: error: pattern type is incompatible with expected type;
 found   : Empty.type
 required: IntMap[a]
Note: if you intended to match against the class, try `case Empty()`
                case Empty =>
                     ^
t414.scala:7: error: type mismatch;
 found   : Unit
 required: a
                case _ =>
                       ^
two errors found
